# beets-stylize

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/: README.remotified.md
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  requirements.txt
scripts/: remotify
src/beetsplug/: __init__.py
src/beetsplug/stylize/: __init__.py  plugin.py
tests/: __init__.py  test_stylize.py
