[project]
name = "beets-stylize"
version = "1.2.1"
description = "Stylize Plugin for Beets"
authors = [{ name = "Christopher Larson", email = "kergoth@gmail.com" }]
requires-python = ">=3.10"
readme = ".github/README.remotified.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beets>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/kergoth/beets-stylize"
Repository = "https://github.com/kergoth/beets-stylize"
Documentation = "https://beets-stylize.readthedocs.io"
Changelog = "https://github.com/kergoth/beets-stylize/releases"

[dependency-groups]
dev = [
    "Pygments>=2.18.0",
    "coverage[toml]>=7.6.1",
    "furo>=2024.8.6",
    "mypy>=1.11.2",
    "myst-parser>=0.16.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.6.0",
    "pydoclint>=0.4.1,<0.5",
    "pytest>=8.3.2",
    "ruff>=0.6.4",
    "pip-audit>=2.9.0",
    "sphinx>=4.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-click>=3.0.2",
    "typeguard>=4.3.0",
    "xdoctest[colors]>=1.2.0",
    "nox>=2026.4.10,<2027",
    "responses>=0.26.0",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/beetsplug"]

[tool.hatch.build.targets.wheel]
include = ["src/beetsplug"]

[tool.hatch.build.targets.wheel.sources]
"src/beetsplug" = "beetsplug"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = [
    "src",
    "*/work/beets-stylize/beets-stylize/src",
    "*/beets-stylize/beets-stylize/src",
    "*/site-packages",
]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["beetsplug.stylize"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
exclude = ["^noxfile\\.py$"]

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C90", # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
# ignore checks that conflict with ruff formatter (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
ignore = [
    "COM812",
    "COM819",
    "D107", # undocumented-public-init conflicts with DOC301
    "D206",
    "D300",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
]

[tool.ruff.lint.per-file-ignores]
"*/test_*.py" = ["S101"]
"noxfile.py" = ["S101"]
"**/conftest.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.nox'
arg-type-hints-in-docstring = false
